--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,7 +37,7 @@ dependencies = [
 dev = [
     "pytest>=7.0",
     "pytest-cov>=4.0",
-    "pytest-agents>=1.0.9",
+    "pytest-agents>=1.0.9; python_version>='3.11'",
     "ruff>=0.1.0",
 ]
 duckdb = [
